secgroups.tf
#Creating security group for EC 2 instances 
resource "aws_security_group" "my-srv-sg" {
  vpc_id = module.vpc.vpc_id
  name   = "my-srv-sg"

#allowing http request
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
#allowing ssh
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
#allowing https requests
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
#allowing communication between efs and instances
  ingress {
    from_port   = 2049
    to_port     = 2049
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


#Creating security group for RDS instance
resource "aws_security_group" "rds" {
  name   = "my-db-sg"
  vpc_id = module.vpc.vpc_id

#allowing access on port 3306
  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

#Rule between RDS SG and EC2 so they can communicate
resource "aws_security_group_rule" "ec2-rds-communication" {
  type                     = "ingress"
  from_port                = 3306
  to_port                  = 3306
  protocol                 = "tcp"
  security_group_id        = aws_security_group.rds.id
  source_security_group_id = aws_security_group.my-srv-sg.id
}
